--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-CROCODILE_GAME_BOT_TOKEN=TELEGRAM_TOKEN
-CROCODILE_GAME_DB_HOST=localhost
-CROCODILE_GAME_DB_USER=postgres
-CROCODILE_GAME_DB_NAME=postgres
-CROCODILE_GAME_DB_PASS=password
-CROCODILE_GAME_DB_PORT=5432
+CROCODILE_GAME_BOT_TOKEN=
+CROCODILE_GAME_DB_HOST=
+CROCODILE_GAME_DB_USER=
+CROCODILE_GAME_DB_NAME=
+CROCODILE_GAME_DB_PASS=
+CROCODILE_GAME_DB_PORT=
 CROCODILE_GAME_DB_SSLMODE=disable
 CROCODILE_GAME_DEV=true
